--- a/css/fau-theme-admin.css
+++ b/css/fau-theme-admin.css
@@ -5,25 +5,28 @@
 /* CSS Custom Properties
 /*-----------------------------------------------------------------------------------*/
 :root {
-  --color-primary-basis: #A36B0D;
-  --color-primary-heller: #d9c689;
-  --color-primary-hellste: #f3eedf;
-  --color-primary-dunkler: #805000;
+  --color-primary-basis: #0381A2;
+  --color-primary-heller: #bfd6f5;
+  --color-primary-hellste: #eaf3fc;
+  --color-primary-dunkler: #026480;
   --color-primary-dunkler-kontrast: #fff;
-  --color-primary-dunkelste: #553500;
+  --color-primary-dunkelste: #014e63;
   --color-primary-basis-kontrast: #fff;
-  --color-primary-ci-hell: #ffb81c;
+  --color-primary-ci-hell: #0bb6f7;
   --color-primary-ci-hell-kontrast: #000;
-  --color-primary-ci-dunkel: #e87722;
-  --color-primary-ci-dunkel-kontrast: #000;
-  --color-primary-ci-hell2: #ffe4a8;
+  --color-primary-ci-hell2: #C8EFFE;
   --color-primary-ci-hell2-kontrast: #333;
   --color-zentral-basis: #002F6C;
   --color-zentral-heller: #8fb1ef;
   --color-zentral-hellste: #dde5f0;
   --color-zentral-dunkler: #24598f;
+  --color-zentral-dunkler-kontrast: #fff;
   --color-zentral-dunkelste: #1f4b7a;
   --color-zentral-basis-kontrast: #fff;
+  --color-zentral-ci-hell: #002f6c;
+  --color-zentral-ci-hell-kontrast: #fff;
+  --color-zentral-ci-hell2: #B7D5FA;
+  --color-zentral-ci-hell2-kontrast: #333;
   --color-phil-basis: #A36B0D;
   --color-phil-heller: #d9c689;
   --color-phil-hellste: #f3eedf;
@@ -33,34 +36,52 @@
   --color-phil-basis-kontrast: #fff;
   --color-phil-ci-hell: #ffb81c;
   --color-phil-ci-hell-kontrast: #000;
-  --color-phil-ci-dunkel: #e87722;
-  --color-phil-ci-dunkel-kontrast: #000;
-  --color-phil-ci-hell2: #ffe4a8;
+  --color-phil-ci-hell2: #fbedcd;
   --color-phil-ci-hell2-kontrast: #333;
   --color-med-basis: #0381A2;
   --color-med-heller: #bfd6f5;
   --color-med-hellste: #eaf3fc;
   --color-med-dunkler: #026480;
+  --color-med-dunkler-kontrast: #fff;
   --color-med-dunkelste: #014e63;
   --color-med-basis-kontrast: #fff;
+  --color-med-ci-hell: #0bb6f7;
+  --color-med-ci-hell-kontrast: #000;
+  --color-med-ci-hell2: #C8EFFE;
+  --color-med-ci-hell2-kontrast: #333;
   --color-nat-basis: #048767;
   --color-nat-heller: #aacfbd;
   --color-nat-hellste: #e5efea;
   --color-nat-dunkler: #006e53;
+  --color-nat-dunkler-kontrast: #fff;
   --color-nat-dunkelste: #00533f;
   --color-nat-basis-kontrast: #fff;
+  --color-nat-ci-hell: #43b02a;
+  --color-nat-ci-hell-kontrast: #000;
+  --color-nat-ci-hell2: #CFF1C3;
+  --color-nat-ci-hell2-kontrast: #333;
   --color-rw-basis: #8d1429;
   --color-rw-heller: #c5ac94;
   --color-rw-hellste: #ede7de;
   --color-rw-dunkler: #690013;
+  --color-rw-dunkler-kontrast: #fff;
   --color-rw-dunkelste: #42000c;
   --color-rw-basis-kontrast: #fff;
+  --color-rw-ci-hell: #971b2f;
+  --color-rw-ci-hell-kontrast: #fff;
+  --color-rw-ci-hell2: #f2eae9;
+  --color-rw-ci-hell2-kontrast: #333;
   --color-tf-basis: #4D5B65;
   --color-tf-heller: #d2d5d7;
   --color-tf-hellste: #ebecee;
   --color-tf-dunkler: #53606b;
+  --color-tf-dunkler-kontrast: #fff;
   --color-tf-dunkelste: #3b4956;
   --color-tf-basis-kontrast: #fff;
+  --color-tf-ci-hell: #779fb5;
+  --color-tf-ci-hell-kontrast: #000;
+  --color-tf-ci-hell2: #E2E7EB;
+  --color-tf-ci-hell2-kontrast: #333;
   --color-Text: #444;
   --color-TextLight: #797676;
   --color-Notice: #a71c18;
@@ -77,39 +98,39 @@
   --color-KontrastHell: #fff;
   --color-KontrastDunkel: #333;
   /* Calculated Values */
-  --color-primary-basis-lighten15: #ffb81c;
+  --color-primary-basis-lighten15: #0bb6f7;
   --color-MetaHomeBackground: #d4d4d4;
   --color-MetaHover: #20497f;
   --color-MetaText: #fff;
   --color-MetaBackgroundLight: #ecf0f4;
-  --color-footer-bg: #ffb81c;
+  --color-footer-bg: #0bb6f7;
   --color-footer-text: #000;
-  --color-hero-bg: #ffb81c;
+  --color-hero-bg: #0bb6f7;
   --color-hero-text: #000;
   --color-mainmenu-toplevel-bg: #fff;
   --color-mainmenu-toplevel-text: #444;
   --color-mainmenu-toplevel-hover-text: #000;
-  --color-mainmenu-toplevel-hover-bg: #ffb81c;
-  --color-mainmenu-sublevel-bg: #ffb81c;
+  --color-mainmenu-toplevel-hover-bg: #0bb6f7;
+  --color-mainmenu-sublevel-bg: #0bb6f7;
   --color-mainmenu-sublevel-text: #000;
   --color-mainmenu-sublevel-hover-text: #fff;
-  --color-mainmenu-sublevel-hover-bg: #805000;
+  --color-mainmenu-sublevel-hover-bg: #026480;
   --color-mainmenu-sublevel-button-text: #fff;
-  --color-mainmenu-sublevel-button-bg: #805000;
+  --color-mainmenu-sublevel-button-bg: #026480;
   --color-mainmenu-sublevel-button-hover-text: #fff;
-  --color-mainmenu-sublevel-button-hover-bg: #553500;
+  --color-mainmenu-sublevel-button-hover-bg: #014e63;
   --color-submenu-toplevel-bg: #fff;
   --color-submenu-toplevel-text: #444;
   --color-submenu-toplevel-hover-text: #000;
-  --color-submenu-toplevel-hover-bg: #ffb81c;
-  --color-submenu-active-bg: #ffb81c;
+  --color-submenu-toplevel-hover-bg: #0bb6f7;
+  --color-submenu-active-bg: #0bb6f7;
   --color-submenu-active-text: #000;
   --color-submenu-hover-text: #fff;
-  --color-submenu-hover-bg: #805000;
+  --color-submenu-hover-bg: #026480;
   --color-submenu-currentlevel-text: #333;
-  --color-submenu-currentlevel-bg: #ffe4a8;
+  --color-submenu-currentlevel-bg: #C8EFFE;
   --color-submenu-sublevel-text: #000;
-  --color-submenu-sublevel-bg: #ffb81c;
+  --color-submenu-sublevel-bg: #0bb6f7;
 }
 
 /*
