--- a/css/fau-theme-editor-style.css
+++ b/css/fau-theme-editor-style.css
@@ -6,25 +6,28 @@
 /* CSS Custom Properties
 /*-----------------------------------------------------------------------------------*/
 :root {
-  --color-primary-basis: #A36B0D;
-  --color-primary-heller: #d9c689;
-  --color-primary-hellste: #f3eedf;
-  --color-primary-dunkler: #805000;
+  --color-primary-basis: #0381A2;
+  --color-primary-heller: #bfd6f5;
+  --color-primary-hellste: #eaf3fc;
+  --color-primary-dunkler: #026480;
   --color-primary-dunkler-kontrast: #fff;
-  --color-primary-dunkelste: #553500;
+  --color-primary-dunkelste: #014e63;
   --color-primary-basis-kontrast: #fff;
-  --color-primary-ci-hell: #ffb81c;
+  --color-primary-ci-hell: #0bb6f7;
   --color-primary-ci-hell-kontrast: #000;
-  --color-primary-ci-dunkel: #e87722;
-  --color-primary-ci-dunkel-kontrast: #000;
-  --color-primary-ci-hell2: #ffe4a8;
+  --color-primary-ci-hell2: #C8EFFE;
   --color-primary-ci-hell2-kontrast: #333;
   --color-zentral-basis: #002F6C;
   --color-zentral-heller: #8fb1ef;
   --color-zentral-hellste: #dde5f0;
   --color-zentral-dunkler: #24598f;
+  --color-zentral-dunkler-kontrast: #fff;
   --color-zentral-dunkelste: #1f4b7a;
   --color-zentral-basis-kontrast: #fff;
+  --color-zentral-ci-hell: #002f6c;
+  --color-zentral-ci-hell-kontrast: #fff;
+  --color-zentral-ci-hell2: #B7D5FA;
+  --color-zentral-ci-hell2-kontrast: #333;
   --color-phil-basis: #A36B0D;
   --color-phil-heller: #d9c689;
   --color-phil-hellste: #f3eedf;
@@ -34,34 +37,52 @@
   --color-phil-basis-kontrast: #fff;
   --color-phil-ci-hell: #ffb81c;
   --color-phil-ci-hell-kontrast: #000;
-  --color-phil-ci-dunkel: #e87722;
-  --color-phil-ci-dunkel-kontrast: #000;
-  --color-phil-ci-hell2: #ffe4a8;
+  --color-phil-ci-hell2: #fbedcd;
   --color-phil-ci-hell2-kontrast: #333;
   --color-med-basis: #0381A2;
   --color-med-heller: #bfd6f5;
   --color-med-hellste: #eaf3fc;
   --color-med-dunkler: #026480;
+  --color-med-dunkler-kontrast: #fff;
   --color-med-dunkelste: #014e63;
   --color-med-basis-kontrast: #fff;
+  --color-med-ci-hell: #0bb6f7;
+  --color-med-ci-hell-kontrast: #000;
+  --color-med-ci-hell2: #C8EFFE;
+  --color-med-ci-hell2-kontrast: #333;
   --color-nat-basis: #048767;
   --color-nat-heller: #aacfbd;
   --color-nat-hellste: #e5efea;
   --color-nat-dunkler: #006e53;
+  --color-nat-dunkler-kontrast: #fff;
   --color-nat-dunkelste: #00533f;
   --color-nat-basis-kontrast: #fff;
+  --color-nat-ci-hell: #43b02a;
+  --color-nat-ci-hell-kontrast: #000;
+  --color-nat-ci-hell2: #CFF1C3;
+  --color-nat-ci-hell2-kontrast: #333;
   --color-rw-basis: #8d1429;
   --color-rw-heller: #c5ac94;
   --color-rw-hellste: #ede7de;
   --color-rw-dunkler: #690013;
+  --color-rw-dunkler-kontrast: #fff;
   --color-rw-dunkelste: #42000c;
   --color-rw-basis-kontrast: #fff;
+  --color-rw-ci-hell: #971b2f;
+  --color-rw-ci-hell-kontrast: #fff;
+  --color-rw-ci-hell2: #f2eae9;
+  --color-rw-ci-hell2-kontrast: #333;
   --color-tf-basis: #4D5B65;
   --color-tf-heller: #d2d5d7;
   --color-tf-hellste: #ebecee;
   --color-tf-dunkler: #53606b;
+  --color-tf-dunkler-kontrast: #fff;
   --color-tf-dunkelste: #3b4956;
   --color-tf-basis-kontrast: #fff;
+  --color-tf-ci-hell: #779fb5;
+  --color-tf-ci-hell-kontrast: #000;
+  --color-tf-ci-hell2: #E2E7EB;
+  --color-tf-ci-hell2-kontrast: #333;
   --color-Text: #444;
   --color-TextLight: #797676;
   --color-Notice: #a71c18;
@@ -78,39 +99,39 @@
   --color-KontrastHell: #fff;
   --color-KontrastDunkel: #333;
   /* Calculated Values */
-  --color-primary-basis-lighten15: #ffb81c;
+  --color-primary-basis-lighten15: #0bb6f7;
   --color-MetaHomeBackground: #d4d4d4;
   --color-MetaHover: #20497f;
   --color-MetaText: #fff;
   --color-MetaBackgroundLight: #ecf0f4;
-  --color-footer-bg: #ffb81c;
+  --color-footer-bg: #0bb6f7;
   --color-footer-text: #000;
-  --color-hero-bg: #ffb81c;
+  --color-hero-bg: #0bb6f7;
   --color-hero-text: #000;
   --color-mainmenu-toplevel-bg: #fff;
   --color-mainmenu-toplevel-text: #444;
   --color-mainmenu-toplevel-hover-text: #000;
-  --color-mainmenu-toplevel-hover-bg: #ffb81c;
-  --color-mainmenu-sublevel-bg: #ffb81c;
+  --color-mainmenu-toplevel-hover-bg: #0bb6f7;
+  --color-mainmenu-sublevel-bg: #0bb6f7;
   --color-mainmenu-sublevel-text: #000;
   --color-mainmenu-sublevel-hover-text: #fff;
-  --color-mainmenu-sublevel-hover-bg: #805000;
+  --color-mainmenu-sublevel-hover-bg: #026480;
   --color-mainmenu-sublevel-button-text: #fff;
-  --color-mainmenu-sublevel-button-bg: #805000;
+  --color-mainmenu-sublevel-button-bg: #026480;
   --color-mainmenu-sublevel-button-hover-text: #fff;
-  --color-mainmenu-sublevel-button-hover-bg: #553500;
+  --color-mainmenu-sublevel-button-hover-bg: #014e63;
   --color-submenu-toplevel-bg: #fff;
   --color-submenu-toplevel-text: #444;
   --color-submenu-toplevel-hover-text: #000;
-  --color-submenu-toplevel-hover-bg: #ffb81c;
-  --color-submenu-active-bg: #ffb81c;
+  --color-submenu-toplevel-hover-bg: #0bb6f7;
+  --color-submenu-active-bg: #0bb6f7;
   --color-submenu-active-text: #000;
   --color-submenu-hover-text: #fff;
-  --color-submenu-hover-bg: #805000;
+  --color-submenu-hover-bg: #026480;
   --color-submenu-currentlevel-text: #333;
-  --color-submenu-currentlevel-bg: #ffe4a8;
+  --color-submenu-currentlevel-bg: #C8EFFE;
   --color-submenu-sublevel-text: #000;
-  --color-submenu-sublevel-bg: #ffb81c;
+  --color-submenu-sublevel-bg: #0bb6f7;
 }
 
 /*-----------------------------------------------------------------------------------*/
@@ -5592,8 +5613,8 @@ label {
 
 input[type=text]:focus,
 textarea:focus {
-  box-shadow: 0 0 5px #A36B0D;
-  border: 1px solid #A36B0D;
+  box-shadow: 0 0 5px #0381A2;
+  border: 1px solid #0381A2;
 }
 
 input[type=submit] {
@@ -5710,7 +5731,7 @@ table th {
   text-align: left;
 }
 table th h1, table th h2, table th h3, table th h4, table th h5, table th h6 {
-  color: #805000;
+  color: #026480;
 }
 table.sorttable th.header {
   cursor: pointer;
@@ -5728,7 +5749,7 @@ table tr:nth-child(odd) td {
   background: var(--color-StandardHellgrau);
 }
 table tr:nth-child(odd) td h1, table tr:nth-child(odd) td h2, table tr:nth-child(odd) td h3, table tr:nth-child(odd) td h4, table tr:nth-child(odd) td h5, table tr:nth-child(odd) td h6 {
-  color: #805000;
+  color: #026480;
 }
 table tr:nth-child(odd) td ul li {
   color: var(--color-primary-dunkelste);
@@ -6224,22 +6245,6 @@ img.alignright {
   background-color: var(--color-primary-ci-hell-kontrast);
 }
 
-.textcolor-primary-ci-dunkel {
-  color: var(--color-primary-ci-dunkel);
-}
-
-.bgcolor-primary-ci-dunkel {
-  background-color: var(--color-primary-ci-dunkel);
-}
-
-.textcolor-primary-ci-dunkel-kontrast {
-  color: var(--color-primary-ci-dunkel-kontrast);
-}
-
-.bgcolor-primary-ci-dunkel-kontrast {
-  background-color: var(--color-primary-ci-dunkel-kontrast);
-}
-
 .textcolor-primary-ci-hell2 {
   color: var(--color-primary-ci-hell2);
 }
@@ -6296,6 +6301,14 @@ img.alignright {
   background-color: var(--color-zentral-dunkler);
 }
 
+.textcolor-zentral-dunkler-kontrast {
+  color: var(--color-zentral-dunkler-kontrast);
+}
+
+.bgcolor-zentral-dunkler-kontrast {
+  background-color: var(--color-zentral-dunkler-kontrast);
+}
+
 .textcolor-zentral-dunkelste {
   color: var(--color-zentral-dunkelste);
 }
@@ -6310,6 +6323,38 @@ img.alignright {
 
 .bgcolor-zentral-basis-kontrast {
   background-color: var(--color-zentral-basis-kontrast);
+}
+
+.textcolor-zentral-ci-hell {
+  color: var(--color-zentral-ci-hell);
+}
+
+.bgcolor-zentral-ci-hell {
+  background-color: var(--color-zentral-ci-hell);
+}
+
+.textcolor-zentral-ci-hell-kontrast {
+  color: var(--color-zentral-ci-hell-kontrast);
+}
+
+.bgcolor-zentral-ci-hell-kontrast {
+  background-color: var(--color-zentral-ci-hell-kontrast);
+}
+
+.textcolor-zentral-ci-hell2 {
+  color: var(--color-zentral-ci-hell2);
+}
+
+.bgcolor-zentral-ci-hell2 {
+  background-color: var(--color-zentral-ci-hell2);
+}
+
+.textcolor-zentral-ci-hell2-kontrast {
+  color: var(--color-zentral-ci-hell2-kontrast);
+}
+
+.bgcolor-zentral-ci-hell2-kontrast {
+  background-color: var(--color-zentral-ci-hell2-kontrast);
 }
 
 .textcol-phil {
@@ -6392,22 +6437,6 @@ img.alignright {
   background-color: var(--color-phil-ci-hell-kontrast);
 }
 
-.textcolor-phil-ci-dunkel {
-  color: var(--color-phil-ci-dunkel);
-}
-
-.bgcolor-phil-ci-dunkel {
-  background-color: var(--color-phil-ci-dunkel);
-}
-
-.textcolor-phil-ci-dunkel-kontrast {
-  color: var(--color-phil-ci-dunkel-kontrast);
-}
-
-.bgcolor-phil-ci-dunkel-kontrast {
-  background-color: var(--color-phil-ci-dunkel-kontrast);
-}
-
 .textcolor-phil-ci-hell2 {
   color: var(--color-phil-ci-hell2);
 }
@@ -6464,6 +6493,14 @@ img.alignright {
   background-color: var(--color-med-dunkler);
 }
 
+.textcolor-med-dunkler-kontrast {
+  color: var(--color-med-dunkler-kontrast);
+}
+
+.bgcolor-med-dunkler-kontrast {
+  background-color: var(--color-med-dunkler-kontrast);
+}
+
 .textcolor-med-dunkelste {
   color: var(--color-med-dunkelste);
 }
@@ -6478,6 +6515,38 @@ img.alignright {
 
 .bgcolor-med-basis-kontrast {
   background-color: var(--color-med-basis-kontrast);
+}
+
+.textcolor-med-ci-hell {
+  color: var(--color-med-ci-hell);
+}
+
+.bgcolor-med-ci-hell {
+  background-color: var(--color-med-ci-hell);
+}
+
+.textcolor-med-ci-hell-kontrast {
+  color: var(--color-med-ci-hell-kontrast);
+}
+
+.bgcolor-med-ci-hell-kontrast {
+  background-color: var(--color-med-ci-hell-kontrast);
+}
+
+.textcolor-med-ci-hell2 {
+  color: var(--color-med-ci-hell2);
+}
+
+.bgcolor-med-ci-hell2 {
+  background-color: var(--color-med-ci-hell2);
+}
+
+.textcolor-med-ci-hell2-kontrast {
+  color: var(--color-med-ci-hell2-kontrast);
+}
+
+.bgcolor-med-ci-hell2-kontrast {
+  background-color: var(--color-med-ci-hell2-kontrast);
 }
 
 .textcol-nat {
@@ -6520,6 +6589,14 @@ img.alignright {
   background-color: var(--color-nat-dunkler);
 }
 
+.textcolor-nat-dunkler-kontrast {
+  color: var(--color-nat-dunkler-kontrast);
+}
+
+.bgcolor-nat-dunkler-kontrast {
+  background-color: var(--color-nat-dunkler-kontrast);
+}
+
 .textcolor-nat-dunkelste {
   color: var(--color-nat-dunkelste);
 }
@@ -6534,6 +6611,38 @@ img.alignright {
 
 .bgcolor-nat-basis-kontrast {
   background-color: var(--color-nat-basis-kontrast);
+}
+
+.textcolor-nat-ci-hell {
+  color: var(--color-nat-ci-hell);
+}
+
+.bgcolor-nat-ci-hell {
+  background-color: var(--color-nat-ci-hell);
+}
+
+.textcolor-nat-ci-hell-kontrast {
+  color: var(--color-nat-ci-hell-kontrast);
+}
+
+.bgcolor-nat-ci-hell-kontrast {
+  background-color: var(--color-nat-ci-hell-kontrast);
+}
+
+.textcolor-nat-ci-hell2 {
+  color: var(--color-nat-ci-hell2);
+}
+
+.bgcolor-nat-ci-hell2 {
+  background-color: var(--color-nat-ci-hell2);
+}
+
+.textcolor-nat-ci-hell2-kontrast {
+  color: var(--color-nat-ci-hell2-kontrast);
+}
+
+.bgcolor-nat-ci-hell2-kontrast {
+  background-color: var(--color-nat-ci-hell2-kontrast);
 }
 
 .textcol-rw {
@@ -6576,6 +6685,14 @@ img.alignright {
   background-color: var(--color-rw-dunkler);
 }
 
+.textcolor-rw-dunkler-kontrast {
+  color: var(--color-rw-dunkler-kontrast);
+}
+
+.bgcolor-rw-dunkler-kontrast {
+  background-color: var(--color-rw-dunkler-kontrast);
+}
+
 .textcolor-rw-dunkelste {
   color: var(--color-rw-dunkelste);
 }
@@ -6590,6 +6707,38 @@ img.alignright {
 
 .bgcolor-rw-basis-kontrast {
   background-color: var(--color-rw-basis-kontrast);
+}
+
+.textcolor-rw-ci-hell {
+  color: var(--color-rw-ci-hell);
+}
+
+.bgcolor-rw-ci-hell {
+  background-color: var(--color-rw-ci-hell);
+}
+
+.textcolor-rw-ci-hell-kontrast {
+  color: var(--color-rw-ci-hell-kontrast);
+}
+
+.bgcolor-rw-ci-hell-kontrast {
+  background-color: var(--color-rw-ci-hell-kontrast);
+}
+
+.textcolor-rw-ci-hell2 {
+  color: var(--color-rw-ci-hell2);
+}
+
+.bgcolor-rw-ci-hell2 {
+  background-color: var(--color-rw-ci-hell2);
+}
+
+.textcolor-rw-ci-hell2-kontrast {
+  color: var(--color-rw-ci-hell2-kontrast);
+}
+
+.bgcolor-rw-ci-hell2-kontrast {
+  background-color: var(--color-rw-ci-hell2-kontrast);
 }
 
 .textcol-tf {
@@ -6632,6 +6781,14 @@ img.alignright {
   background-color: var(--color-tf-dunkler);
 }
 
+.textcolor-tf-dunkler-kontrast {
+  color: var(--color-tf-dunkler-kontrast);
+}
+
+.bgcolor-tf-dunkler-kontrast {
+  background-color: var(--color-tf-dunkler-kontrast);
+}
+
 .textcolor-tf-dunkelste {
   color: var(--color-tf-dunkelste);
 }
@@ -6646,6 +6803,38 @@ img.alignright {
 
 .bgcolor-tf-basis-kontrast {
   background-color: var(--color-tf-basis-kontrast);
+}
+
+.textcolor-tf-ci-hell {
+  color: var(--color-tf-ci-hell);
+}
+
+.bgcolor-tf-ci-hell {
+  background-color: var(--color-tf-ci-hell);
+}
+
+.textcolor-tf-ci-hell-kontrast {
+  color: var(--color-tf-ci-hell-kontrast);
+}
+
+.bgcolor-tf-ci-hell-kontrast {
+  background-color: var(--color-tf-ci-hell-kontrast);
+}
+
+.textcolor-tf-ci-hell2 {
+  color: var(--color-tf-ci-hell2);
+}
+
+.bgcolor-tf-ci-hell2 {
+  background-color: var(--color-tf-ci-hell2);
+}
+
+.textcolor-tf-ci-hell2-kontrast {
+  color: var(--color-tf-ci-hell2-kontrast);
+}
+
+.bgcolor-tf-ci-hell2-kontrast {
+  background-color: var(--color-tf-ci-hell2-kontrast);
 }
 
 /*-----------------------------------------------------------------------------------*/
