--- a/src/sass/structure/navigation/_mainmenu.scss
+++ b/src/sass/structure/navigation/_mainmenu.scss
@@ -93,9 +93,17 @@
 	}
 	.level2, 
 	.level3 {
+	    a {
+		 color: var(--color-mainmenu-sublevel-text); 
+		    background-color: var(--color-mainmenu-sublevel-bg); 
+	    }
+	    
 		a:hover, 
 		a:focus { 
 		    text-decoration: underline;
+		    
+		    color: var(--color-mainmenu-sublevel-hover-text); 
+		    background-color: var(--color-mainmenu-sublevel-hover-bg); 
 		}
 	}
 	/* Fly-Out / secondary navigation */
@@ -265,7 +273,7 @@
 
 					> a {
 						font-weight: bold;
-						border-bottom-color: $PalettonDunkler;
+						border-bottom-color: var(--color-primary-dunkler);;
 						padding-left: $padding-base-horizontal;
 
 						&:before {
@@ -280,7 +288,7 @@
 				    @if $colorstyle == '2015' {
 					color: var(--color-primary-hellste);
 				    }
-				    background-color: transparent;
+				//    background-color: transparent;
 				    padding-left: $padding-base-horizontal;
 				}
 			}
